--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>优化展示页面</title>
+    <title>$Lester Let's flip ltc!</title>
     <style>
         body {
             display: flex;
